--- a/public/404.html
+++ b/public/404.html
@@ -7,25 +7,28 @@
     <script>
       // Single Page Apps for GitHub Pages
       // https://github.com/rafgraph/spa-github-pages
-      // Prevent infinite loop
-      if (!sessionStorage.getItem('redirecting')) {
-        sessionStorage.setItem('redirecting', 'true');
+      (function() {
+        // Prevent infinite loop
+        var redirectKey = 'ghp_redirect_' + window.location.pathname;
+        if (sessionStorage.getItem(redirectKey)) {
+          sessionStorage.removeItem(redirectKey);
+          return;
+        }
+        
         var pathSegmentsToKeep = 2; // Keep /ZXS-order-form/
         var l = window.location;
         var pathname = l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/');
+        
         if (pathname) {
+          sessionStorage.setItem(redirectKey, 'true');
           l.replace(
             l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
             '/ZXS-order-form/?/' + pathname.replace(/&/g, '~and~') +
-            (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+            (l.search && !l.search.includes('?/') ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
             l.hash
           );
-        } else {
-          sessionStorage.removeItem('redirecting');
         }
-      } else {
-        sessionStorage.removeItem('redirecting');
-      }
+      })();
     </script>
   </head>
   <body>
